tests/snapshots/solver__condition_missing_requirement.snap
---
source: tests/solver.rs
expression: "solve_for_snapshot(provider, &requirements, &[])"
---
menu=1
