tests/snapshots/solver__conditional_requirements.snap
---
source: tests/solver.rs
expression: "solve_for_snapshot(provider, &requirements, &[])"
---
bar=1
baz=1
foo=1
