tests/snapshots/solver__merge_disabled.snap
---
source: tests/solver.rs
expression: "solve_snapshot(provider, &[\"a\"])"
---
The following packages are incompatible
|-- a * cannot be installed because there are no viable options:
    |-- a 2 is disabled because it is externally disabled
    |-- a 1 is disabled because it is externally disabled

