tests/snapshots/solver__merge_excluded.snap
---
source: tests/solver.rs
expression: "solve_snapshot(provider, &[\"a\"])"
---
The following packages are incompatible
|-- a * cannot be installed because there are no viable options:
    |-- a 2 is excluded because it is externally excluded
    |-- a 1 is excluded because it is externally excluded

