tests/snapshots/solver__merge_installable2.snap
---
source: tests/solver.rs
assertion_line: 1012
expression: "solve_snapshot(provider, &[\"a 0..3\", \"a 3..10\", \"a 2..4\"])"
---
The following packages are incompatible
├─ a >=0, <3 can be installed with any of the following options:
│  └─ a 1
├─ a >=3, <10 can be installed with any of the following options:
│  └─ a 5 | 6 | 7 | 8 | 9
└─ a >=2, <4 cannot be installed because there are no viable options:
   ├─ a 3, which conflicts with the versions reported above.
   └─ a 2, which conflicts with the versions reported above.
